everything is broken.

--- a/ritly_app/app/views/links/_form_new.html.erb
+++ b/ritly_app/app/views/links/_form_new.html.erb
@@ -1,4 +1,4 @@
-<%= form_for :link, url: links_path do |f| %>
-  <%= f.text_field :url, placeholder: "Type or paste a url here." %>
+<%= form_for @link do |f| %>
+  <%= f.text_field :url, placeholder: "enter a url" %>
 <% end %>
 
