checks for http://

--- a/ritly_app/app/views/links/index.html.erb
+++ b/ritly_app/app/views/links/index.html.erb
@@ -1,1 +1,10 @@
-<%= render @links %>
+<div>
+  <table class="show">
+    <tr>
+      <th>ID</th>
+      <th>Url</th>
+      <th>Unique ID</th>
+    </tr>
+    <%= render @links %>
+  </table>
+</div>
