--- a/ritly_app/app/views/links/index.html.erb
+++ b/ritly_app/app/views/links/index.html.erb
@@ -1,10 +1,5 @@
 <div>
-  <table class="show">
-    <tr>
-      <th>ID</th>
-      <th>Url</th>
-      <th>Unique ID</th>
-    </tr>
+<h1>all yr lnks</h1>
+<h3>(r blng 2 us)</h3><br>
     <%= render @links %>
-  </table>
 </div>
