--- a/ritly_app/app/views/links/show.html.erb
+++ b/ritly_app/app/views/links/show.html.erb
@@ -1,10 +1,5 @@
 <div>
-  <table class="show">
-    <tr>
-      <th>ID</th>
-      <th>Url</th>
-      <th>Unique ID</th>
-    </tr>
-    <%= render @link %>
-  </table>
+  <h1> Your Shortened URL </h1>
+  <%= render @link %>
+
 </div>
