mo' stuff. done for now.

--- a/ritly_app/app/views/links/_form_new.html.erb
+++ b/ritly_app/app/views/links/_form_new.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @link, class: "form-control" do |f| %>
+<%= form_for @link, action: "/links", class: "form-control" do |f| %>
   <%= f.text_field :url, placeholder: "enter a url" %>
   <%= f.text_field :random_string, placeholder: "custom-text" %>
 
