--- a/ritly_app/app/views/go/index.html.erb
+++ b/ritly_app/app/views/go/index.html.erb
@@ -1,6 +1,3 @@
 <h1>Welcome to Ritly!</h1>
 
-<ul>
-<li><a href="/links">History</a></li>
-<li><a href="/links/new">Make a new link</a></li>
-</ul>
+<%= render "links/form_new" %>
