--- a/ritly_app/app/views/users/show.html.erb
+++ b/ritly_app/app/views/users/show.html.erb
@@ -1,2 +1,5 @@
-<h1>Users#show</h1>
-<p>Find me in app/views/users/show.html.erb</p>
+<h1><%=@user.name%>'s profile</h1>
+
+
+<%=@user.name%><br>
+<%=@user.email%><br>
